--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,7 +31,7 @@
         @apply p-1 border-2 border-gray-950 w-full px-2 pb-1.5 outline-none disabled:opacity-50 font-bold text-gray-800;
     }
     .table-header {
-        @apply bg-gray-950 border-2 border-gray-950 
+        @apply bg-gray-950 border-2 border-gray-950;
     }
     .table-row {
         @apply text-black bg-white hover:bg-sky-800 hover:text-white cursor-pointer border-gray-800 border-2;
