--- a/styles/globals.css
+++ b/styles/globals.css
@@ -83,3 +83,11 @@
         @apply w-full px-3 py-2 border border-gray-300 rounded-md bg-white text-sm text-gray-700 focus:outline-none focus:ring-2 focus:ring-sky-500 focus:border-transparent shadow-sm transition;
     }
 }
+
+.text-shadow {
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+.text-logo {
+    font-variant: small-caps;
+}
