--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,7 +20,7 @@
     }
 
     .btn-base {
-        @apply inline-flex items-center justify-center gap-2 rounded-xl font-semibold tracking-wide px-4 py-2 text-sm sm:text-base transition-all duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-offset-1;
+        @apply inline-flex items-center justify-center gap-2 rounded-xl font-semibold tracking-wide px-2 sm:px-4 py-2 text-xs sm:text-base transition-all duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-offset-1;
     }
 
     .btn-primary {
@@ -43,10 +43,6 @@
         @apply bg-red-600 text-white hover:bg-red-800 disabled:opacity-50 disabled:bg-red-600 border-2 border-red-600 text-sm sm:text-base px-3 py-1 sm:px-4 sm:py-2 w-full sm:w-auto min-w-0 sm:min-w-[160px] md:min-w-[200px] flex items-center justify-center gap-2;
     }
 
-    /* .text-input {
-        @apply p-1 border-2 border-gray-950 w-full px-2 pb-1.5 outline-none disabled:opacity-50 font-bold text-gray-800;
-    } */
-
     .table-header {
         @apply bg-gray-900 text-white text-left text-sm sm:text-base border-b-2 border-gray-700 px-4 py-2 uppercase tracking-wide;
     }
@@ -61,6 +57,10 @@
 
     .field-label {
         @apply capitalize block text-sm font-medium text-gray-700 mb-1;
+    }
+
+    .page-title {
+        @apply flex text-sm sm:text-xl font-semibold text-gray-800 border-b pb-2 mb-4;
     }
 
     .card {
@@ -85,6 +85,10 @@
 
     .text-input {
         @apply w-full px-3 py-2 border border-gray-300 rounded-md bg-white text-sm text-gray-700 focus:outline-none focus:ring-2 focus:ring-sky-500 focus:border-transparent shadow-sm transition;
+    }
+
+    .page-wrapper {
+        @apply m-2 xl:m-8;
     }
 }
 
