--- a/styles/globals.css
+++ b/styles/globals.css
@@ -48,7 +48,7 @@
     }
 
     .table-row {
-        @apply text-gray-800 bg-white hover:bg-sky-700 hover:text-white cursor-pointer border-b border-gray-200 px-4 py-2 transition duration-200 ease-in-out;
+        @apply text-gray-800 bg-white hover:bg-blue-100 hover:text-black cursor-pointer border-b border-gray-200 px-4 py-2 transition duration-200 ease-in-out;
     }
 
     .table-row-active {
